--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,16 @@
   visibility:inherit;
 }
 
+.buttonPrimary{
+  background-color: transparent;
+  color: black;
+  padding: 1rem 2rem;
+  border: none;
+  font-weight: 700;
+  font-size: 2rem;
+  cursor: cell;
+}
+
 /*.App-logo {
   height: 40vmin;
   pointer-events: none;
