--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 .fond1{
   width: 100%;
